--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Josh's First Site</title>
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 
 	<body>
@@ -18,7 +19,7 @@
 		
 		</table>
 		
-		<hr size="3" noshade>
+		<hr>
 		<h3>Education</h3>
 		<ul>
 			<li>Valencia College</li>
@@ -31,7 +32,7 @@
 		<ol>
 			<li>Playing Video Games</li>
 			<li>Watching Movies</li>
-			<li>Watching TV Shows</li>
+			<li>Cooking</li>
 		</ol>
 		<hr>
 		<h3>Skills</h3>
@@ -61,7 +62,7 @@
 				</td>
 			</tr>
 		</table>
-	<hr size="3" noshade>
+		<hr>
 		<h3><a href="Contactme.html">Contact Me</a></h3>
 		<h3><a href="AboutMe.html">About Me</a></h3>
 		
