--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>About me</title>
+	<meta charset="UTF-8">
+	<title>About me</title>
+	<link rel="stylesheet" href="css/styles.css">	
 </head>
 
 <body>
