--- a/Contactme.html
+++ b/Contactme.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Contact Info</title>
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<h2>Email</h2>
